Add proxy pattern post

--- a/_config.yml
+++ b/_config.yml
@@ -79,6 +79,7 @@ include:
 gems:
   - jekyll-paginate
   - jekyll-sitemap # add /sitemap.xml file
+  - jekyll-gist
 
 paginate_path: /_pages/page:num
 
